<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mid360_driver</name>
  <version>1.0.0</version>
  <description>an lightweight implementation of the Mid-360 driver</description>
  <maintainer email="1709185482@qq.com">Yingjie Huang</maintainer>
  <license>MIT</license>
  <author email="1709185482@qq.com">Yingjie Huang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>asio</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
